--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                     <div class="regular-s">DIAMONDS</div>
                                 </a>
                                 <div class="nav-buttons">
-                                    <a data-wf--icon-button--variant="small" href="tel:+12125550199" class="icon-button w-variant-5486c117-8f56-ac61-d2f9-9007614520f0 w-inline-block">
+                                    <a data-wf--icon-button--variant="small" href="tel:+917603825843" class="icon-button w-variant-5486c117-8f56-ac61-d2f9-9007614520f0 w-inline-block">
                                         <img src="https://cdn.prod.website-files.com/68adbe74167afa69c31b65ea/68adc88e35a0c25f1799232d_PhoneCall.svg" loading="lazy" alt="Phone" class="icon icon-button-icon w-variant-5486c117-8f56-ac61-d2f9-9007614520f0"/>
                                     </a>
                                     <div class="menu-button">
@@ -146,7 +146,7 @@
                                             <img src="https://cdn.prod.website-files.com/68adbe74167afa69c31b65ea/68adc88e811d502105e57bb2_CaretRight.svg" loading="lazy" alt="" class="icon menu-item-icon"/>
                                         </a>
                                     </div>
-                                    <a href="https://www.airbnb.com/" target="_blank" class="image-button w-inline-block">
+                                    <a href="tel:+917603825843" target="_blank" class="image-button w-inline-block">
                                         <div class="image-button-content">
                                             <div class="medium-m">Start Your Project</div>
                                             <div class="image-button-icons">
@@ -221,7 +221,7 @@
                                 </div>
                             </div>
                             <div class="hero-image">
-                                <img src="https://cdn.prod.website-files.com/68adbe74167afa69c31b65ea/68aedb4f51c4fdbf6c074c38_pexels-heyho-7195529.avif" loading="lazy" alt="Modern living room with purple sofa, colorful rug, and open shelving" class="background-image"/>
+                                <img src="img/sat1.jpeg" loading="lazy" alt="Modern living room with purple sofa, colorful rug, and open shelving" class="background-image"/>
                                 <a data-wf--icon-button--variant="big" href="https://www.google.com/maps" target="_blank" class="icon-button w-inline-block">
                                     <img src="https://cdn.prod.website-files.com/68adbe74167afa69c31b65ea/68adc88e3aa37359d7cc44ad_MapTrifold.svg" loading="lazy" alt="Map" class="icon icon-button-icon"/>
                                 </a>
@@ -271,7 +271,7 @@
                             </div>
                         </div>
                     </div>
-                    <img src="https://cdn.prod.website-files.com/68adbe74167afa69c31b65ea/68aee162cd5516fe1813c629_pexels-heyho-7195570_1.avif" loading="lazy" alt="Modern living room with a blue sofa, beige armchair, and glass coffee tables" class="background-image parallax-image"/>
+                    <img src="img/sa1.jpg" loading="lazy" alt="Modern living room with a blue sofa, beige armchair, and glass coffee tables" class="background-image parallax-image"/>
                 </section>
                 <section id="about" class="about">
                     <div class="w-layout-blockcontainer container big-container w-container">
@@ -428,7 +428,7 @@
                                                 <div class="regular-l">01</div>
                                                 <div class="overview-block-info">
                                                     <h3 class="h3">Brand Design</h3>
-                                                    <p class="medium-xs overview-block-description">Logo & visual identity</p>
+                                                    <p class="medium-xs overview-block-description">Logo & visual<br> identity</p>
                                                 </div>
                                             </div>
                                             <div class="overview-block-icon-wrapper">
@@ -523,7 +523,7 @@
                                 </div>
                                 <h2 class="h2 offer-title">One Seamless Process from concept to launch</h2>
                             </div>
-                            <a data-wf--white-button--variant="primary" href="https://www.airbnb.com/" target="_blank" class="white-button w-inline-block">
+                            <a data-wf--white-button--variant="primary" href="#pricing" target="_blank" class="white-button w-inline-block">
                                 <div class="white-button-icon-wrapper">
                                     <div class="button-icons">
                                         <img loading="lazy" src="https://cdn.prod.website-files.com/68adbe74167afa69c31b65ea/68adc9265ad51e253d3e149f_ArrowUpRight.svg" alt="" class="icon button-icon"/>
@@ -534,7 +534,7 @@
                             </a>
                             <div class="offer-overlay">
                             </div>
-                            <img src="https://cdn.prod.website-files.com/68adbe74167afa69c31b65ea/68af1c93cb63694c6eaf9ddc_pexels-heyho-7195595.avif" loading="lazy" alt="Close-up of dark green velvet dining chairs around a white table with decorative accents" class="background-image"/>
+                            <img src="img/sa2.jpg" loading="lazy" alt="Close-up of dark green velvet dining chairs around a white table with decorative accents" class="background-image"/>
                         </div>
                     </div>
                 </section>
@@ -606,7 +606,7 @@
                                     </div>
                                     <h2 class="h2 section-title w-variant-fec327d6-643f-39bf-de41-b310845edbfd">Frequently Asked Questions</h2>
                                 </div>
-                                <a data-wf--black-button--variant="primary" href="https://www.airbnb.com/" target="_blank" class="black-button w-inline-block">
+                                <a data-wf--black-button--variant="primary" href="tel:+917603825843" target="_blank" class="black-button w-inline-block">
                                     <div class="black-button-icon-wrapper">
                                         <div class="button-icons">
                                             <img src="https://cdn.prod.website-files.com/68adbe74167afa69c31b65ea/68adc88e0d9ecf56a75aab0f_ArrowUpRight.svg" loading="lazy" alt="" class="icon button-icon"/>
@@ -676,7 +676,7 @@
                                 <p class="medium-m pricing-descrption">Ready to turn your vision into reality? Let's discuss your project and create something amazing together.</p>
                             </div>
                             <div class="pricing-button">
-                                <a data-wf--white-button--variant="primary" href="https://www.airbnb.com/" target="_blank" class="white-button w-inline-block">
+                                <a data-wf--white-button--variant="primary" href="tel:+917603825843" target="_blank" class="white-button w-inline-block">
                                     <div class="white-button-icon-wrapper">
                                         <div class="button-icons">
                                             <img loading="lazy" src="https://cdn.prod.website-files.com/68adbe74167afa69c31b65ea/68adc9265ad51e253d3e149f_ArrowUpRight.svg" alt="" class="icon button-icon"/>
@@ -758,7 +758,7 @@
                                         </div>
                                         <h2 class="h2 section-title w-variant-fec327d6-643f-39bf-de41-b310845edbfd">Ready to Start Your Digital Journey</h2>
                                     </div>
-                                    <a data-wf--white-button--variant="primary" href="https://www.airbnb.com/" target="_blank" class="white-button w-inline-block">
+                                    <a data-wf--white-button--variant="primary" href="tel:+917603825843" target="_blank" class="white-button w-inline-block">
                                         <div class="white-button-icon-wrapper">
                                             <div class="button-icons">
                                                 <img loading="lazy" src="https://cdn.prod.website-files.com/68adbe74167afa69c31b65ea/68adc9265ad51e253d3e149f_ArrowUpRight.svg" alt="" class="icon button-icon"/>
@@ -775,9 +775,7 @@
                                             <a href="#about" class="footer-item w-inline-block">
                                                 <div class="medium-m">Services</div>
                                             </a>
-                                            <a href="#gallery" class="footer-item w-inline-block">
-                                                <div class="medium-m">Portfolio</div>
-                                            </a>
+                                           
                                             <a href="#features" class="footer-item w-inline-block">
                                                 <div class="medium-m">Process</div>
                                             </a>
@@ -792,22 +790,15 @@
                                             </a>
                                         </div>
                                     </div>
-                                    <div class="footer-block second-block">
-                                        <div class="regular-s footer-block-name">Explore</div>
-                                        <div class="footer-items">
-                                            <a href="https://www.nutsdev.com/" target="_blank" class="footer-item w-inline-block">
-                                                <div class="medium-m">NutsDev</div>
-                                            </a>
-                                        </div>
-                                    </div>
+                                   
                                     <div id="w-node-f331d754-fd31-4593-fdd7-2341bfb2b97c-bfb2b95b" class="footer-block third-block">
                                         <div class="regular-s footer-block-name">Contact</div>
                                         <div class="footer-items">
                                             <a href="mailto:hello@diamonds.agency?subject=Hello!" class="footer-item w-inline-block">
                                                 <div class="medium-m">hello@diamonds.agency</div>
                                             </a>
-                                            <a href="tel:+15551234567" class="footer-item w-inline-block">
-                                                <div class="medium-m">+1 (555) 123-4567</div>
+                                            <a href="tel:+917603825843" class="footer-item w-inline-block">
+                                                <div class="medium-m">+91 7603825843</div>
                                             </a>
                                         </div>
                                     </div>
