Update Open Graph image meta tag

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <head>
             <meta charset="utf-8"/>
             <title>DIAMONDS – Turn Your Vision Into Something Real</title>
+            <meta name="google-site-verification" content="ozOIkIJ4unDF7A7YL5yHLDlBNcXQqxN5BPIrCaV3LBc" />
             <meta content="We craft more than visuals. We shape a full digital universe for your brand—from eye-catching identity design to a smooth, high-performance application." name="description"/>
             <meta content="DIAMONDS – Turn Your Vision Into Something Real" property="og:title"/>
             <meta content="We craft more than visuals. We shape a full digital universe for your brand—from eye-catching identity design to a smooth, high-performance application." property="og:description"/>
-            <meta content="https://cdn.prod.website-files.com/68adbe74167afa69c31b65ea/68b1c24dd26571d2de7878c1_Opengraph%20-%20Home.png" property="og:image"/>
+            <meta content="/img/sat1.jpeg" property="og:image"/>
             <meta content="DIAMONDS – Turn Your Vision Into Something Real" property="twitter:title"/>
             <meta content="We craft more than visuals. We shape a full digital universe for your brand—from eye-catching identity design to a smooth, high-performance application." property="twitter:description"/>
             <meta property="og:type" content="website"/>
